css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');

body {
    font-family: 'Josefin Sans', sans-serif;
    max-width: 1000px;
    margin: 0 auto;
    text-align: center;
}

#container {
    background-color: white;
    background-image: url('../zuke.jpg');
    background-size: cover;
    height: 800px;
    width: 800px;
    border: 2px solid black;
    margin: 0 auto;
}

p {
    font-size: 20px;
}

form {
    margin: 20px;
}

